examples/test/testpolicy380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy380
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key7: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value6
          key45: value37
          key27: value19
      podSelector:
        matchLabels:
          key0: value28
